--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "antd": "^4.16.13",
     "axios": "^0.21.1",
     "humps": "^2.0.1",
     "node-sass": "^6.0.0",
