--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "PORT=3500 webpack serve",
+    "start": "webpack serve",
     "watch": "webpack --watch",
     "build": "webpack --mode production"
   },
