fix: 認証周りの修正

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_ENV=development
 
 # APIのホスト情報
-REACT_APP_AUTH_API_HOST=
-REACT_APP_APPLICATION_API_HOST=
+REACT_APP_AUTH_API_HOST=http://localhost:8000
+REACT_APP_APPLICATION_API_HOST=https://fed79e73-d600-4c5a-8f45-dfa52cb9d13a.mock.pstmn.io
