--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "webpack serve",
     "watch": "webpack --watch",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "prettier": "prettier --write src/**/*",
+    "eslint": "eslint --cache --color --ext .ts,.tsx --fix --max-warnings 0 src/"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -28,9 +30,6 @@
     "ress": "^4.0.0",
     "typescript": "^4.2.3"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -50,11 +49,23 @@
     "@babel/preset-typescript": "^7.14.5",
     "@babel/register": "^7.14.5",
     "@types/humps": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "6.12.0",
+    "eslint-import-resolver-node": "0.3.4",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.21.4",
+    "eslint-plugin-react-hooks": "4.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "prettier": "2.4.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.2.3",
